Update, add gaps, temporary desync locksreenw

--- a/i3.config
+++ b/i3.config
@@ -40,11 +40,18 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+# gaps outer current plus 5
+# gaps inner current plus 5
+gaps inner 5  
+gaps outer 5 
+
 # start a terminal
 bindsym $mod+Return exec termite
 bindsym $mod+Tab exec firefox
-bindsym $mod+o exec /home/dawid/.config/i3/betterlockscreen -l
+bindsym $mod+Shift+Tab exec firefox -private-window
+bindsym $mod+o exec betterlock -l
 bindsym Print exec flameshot gui
+bindsym Shift+Print exec flameshot full -c -p /home/dawid/Pictures
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -177,7 +184,9 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-default_border pixel 0
+default_border pixel 3
+
+# class                 border  backgr. text    indicator child_border
 client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
 client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
 client.unfocused        #333333 #222222 #888888 #292d2e   #222222
