--- a/i3.config
+++ b/i3.config
@@ -46,9 +46,9 @@ gaps inner 5
 gaps outer 5 
 
 # start a terminal
-bindsym $mod+Return exec termite
-bindsym $mod+Tab exec firefox
-bindsym $mod+Shift+Tab exec firefox -private-window
+bindsym $mod+Return exec alacritty
+bindsym $mod+Tab exec brave
+bindsym $mod+Shift+Tab exec brave -incognito
 bindsym $mod+o exec betterlock -l
 bindsym Print exec flameshot gui
 bindsym Shift+Print exec flameshot full -c -p /home/dawid/Pictures
