--- a/i3.config
+++ b/i3.config
@@ -50,6 +50,7 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Tab exec brave
 bindsym $mod+Shift+Tab exec brave -incognito
 bindsym $mod+o exec betterlock -l
+bindsym $mod+i exec systemctl suspend
 bindsym Print exec flameshot gui
 bindsym Shift+Print exec flameshot full -c -p /home/dawid/Pictures
 
