--- a/suspend@.service
+++ b/suspend@.service
@@ -6,7 +6,7 @@ Before=sleep.target
 User=%I
 Type=forking
 Environment=DISPLAY=:0
-ExecStart=betterlock -l
+ExecStart=/home/%I/.local/bin/betterlock -l
 ExecStartPost=/usr/bin/sleep 1
 
 [Install]
