--- a/i3status.config
+++ b/i3status.config
@@ -13,11 +13,19 @@ general {
 
 order += "wireless _first_"
 order += "memory"
+order += "volume master"
 order += "tztime local"
 
 wireless _first_ {
         format_up = "W:(%quality at %essid)"
         format_down = "W: down"
+}
+
+volume master {
+        format = " ♪: %volume  " 
+	device = "default"
+	mixer = "Master"
+	mixer_idx = 0
 }
 
 
