--- a/i3.config
+++ b/i3.config
@@ -200,8 +200,9 @@ client.background       #ffffff
 # finds out, if available)
 bar {
         status_command i3status
-	font pango:mono 8
+	font pango: "Noto Serif Tamil" 9
 	position bottom
+    separator_symbol "┃"
     colors {
         background #212121
         statusline #ffffff
