--- a/i3.config
+++ b/i3.config
@@ -199,7 +199,7 @@ client.background       #ffffff
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+    status_command py3status
 	font pango: "Noto Serif Tamil" 9
 	position bottom
     separator_symbol "┃"
