--- a/i3status.config
+++ b/i3status.config
@@ -22,12 +22,14 @@ wireless _first_ {
 }
 
 volume master {
-        format = " ♪: %volume  " 
+        format = " ♪: %volume " 
 	device = "default"
 	mixer = "Master"
 	mixer_idx = 0
+        on_click 2 = "exec amixer set Master toggle && killall -SIGUSR1 i3status"
+        on_click 4 = "exec amixer set Master 3%+    && killall -SIGUSR1 i3status"
+        on_click 5 = "exec amixer set Master 3%-    && killall -SIGUSR1 i3status"
 }
-
 
 ethernet _first_ {
         format_up = "E: %ip (%speed)"
@@ -53,5 +55,5 @@ memory {
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S   "
+        format = "%Y-%m-%d %H:%M:%S    "
 }
