update for skdman and timezone setting

--- a/i3status.config
+++ b/i3status.config
@@ -55,5 +55,6 @@ memory {
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S    "
+        timezone = "Europe/Warsaw"
+        format = "%Y-%m-%d %H:%M:%S   "
 }
