--- a/i3status.config
+++ b/i3status.config
@@ -26,9 +26,9 @@ volume master {
 	device = "default"
 	mixer = "Master"
 	mixer_idx = 0
-        on_click 2 = "exec amixer set Master toggle && killall -SIGUSR1 i3status"
-        on_click 4 = "exec amixer set Master 3%+    && killall -SIGUSR1 i3status"
-        on_click 5 = "exec amixer set Master 3%-    && killall -SIGUSR1 i3status"
+        on_click 4 = "exec pactl set-sink-volume @DEFAULT_SINK@ +1000 && killall -SIGUSR1 i3status"
+        on_click 5 = "exec pactl set-sink-volume @DEFAULT_SINK@ -1000 && killall -SIGUSR1 i3status"
+        on_click 2 = "exec pactl set-sink-mute @DEFAULT_SINK@ toggle  && killall -SIGUSR1 i3status"
 }
 
 ethernet _first_ {
@@ -56,5 +56,5 @@ memory {
 
 tztime local {
         timezone = "Europe/Warsaw"
-        format = "%Y-%m-%d %H:%M:%S   "
+        format = "%Y-%m-%d %H:%M:%S"
 }
