back 2 firefox it is.

--- a/i3.config
+++ b/i3.config
@@ -47,8 +47,8 @@ gaps outer 5
 
 # start a terminal
 bindsym $mod+Return exec alacritty
-bindsym $mod+Tab exec brave
-bindsym $mod+Shift+Tab exec brave -incognito
+bindsym $mod+Tab exec firefox
+bindsym $mod+Shift+Tab exec firefox -private-window
 bindsym $mod+o exec betterlock -l
 bindsym $mod+i exec systemctl suspend
 bindsym Print exec flameshot gui
