--- a/HOME/.config/polybar/config.ini
+++ b/HOME/.config/polybar/config.ini
@@ -30,7 +30,7 @@ width = 100%
 height = 24pt
 radius = 0
 
-dpi = 164
+dpi = 92
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -70,7 +70,6 @@ type = custom/script
 exec = ~/.config/polybar/pipewire-simple.sh
 interval = 3
 click-right = exec pavucontrol &
-# click-right = exec alacritty &
 click-left = ~/.config/polybar/pipewire-simple.sh --mute &
 scroll-up = ~/.config/polybar/pipewire-simple.sh --up &
 scroll-down = ~/.config/polybar/pipewire-simple.sh --down &
@@ -173,7 +172,8 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+label-connected = WIFI - %{F#F0C674}ON%{F-}
+label-disconnected = WIFI - OFF
 
 [module/eth]
 inherit = network-base
@@ -184,7 +184,7 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 type = internal/date
 interval = 1
 
-date = %H:%M
+date = %d-%m %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
 
 label = %date%
