--- a/HOME/.config/polybar/config.ini
+++ b/HOME/.config/polybar/config.ini
@@ -30,7 +30,7 @@ width = 100%
 height = 24pt
 radius = 0
 
-dpi = 92
+dpi = 144
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -53,7 +53,7 @@ separator-foreground = ${colors.disabled}
 font-0 = monospace;2
 
 modules-left = xworkspaces xwindow
-modules-right = systray pipewire-simple filesystem wlan xkeyboard memory cpu date 
+modules-right = systray pipewire-simple memory cpu filesystem wlan date 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
@@ -152,14 +152,12 @@ label-indicator-background = ${colors.secondary}
 type = internal/memory
 interval = 2
 format-prefix = "RAM "
-format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
 format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
 [network-base]
