Update tmsu.desktop to use sh instead of absolute path for add-tmsu-tag.sh

--- a/HOME/.local/share/file-manager/actions/tmsu.desktop
+++ b/HOME/.local/share/file-manager/actions/tmsu.desktop
@@ -6,5 +6,5 @@ Profiles=profile-zero;
 
 [X-Action-Profile profile-zero]
 MimeTypes=image/*;
-Exec=~/.local/bin/add-tmsu-tag.sh %f
+Exec=sh add-tmsu-tag.sh %f
 Name=Default profile
