--- a/HOME/.config/polybar/config.ini
+++ b/HOME/.config/polybar/config.ini
@@ -27,8 +27,8 @@ disabled = #707880
 
 [bar/example]
 width = 100%
-height = 24pt
-radius = 0
+height = 26pt
+radius = 16pt
 
 dpi = 144
 
@@ -36,13 +36,13 @@ background = ${colors.background}
 foreground = ${colors.foreground}
 bottom = true
 
-line-size = 3pt
+line-size = 0
 
-border-size = 1pt
-border-color = #888
+border-size = 2pt
+border-color = #666
 
-padding-left = 0
-padding-right = 1
+padding-left = 1
+padding-right = 2
 
 
 module-margin = 1
@@ -50,7 +50,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+font-0 = Fira Code;2
 
 modules-left = xworkspaces xwindow
 modules-right = systray pipewire-simple memory cpu filesystem wlan date 
@@ -68,7 +68,7 @@ enable-ipc = true
 [module/pipewire-simple]
 type = custom/script
 exec = ~/.config/polybar/pipewire-simple.sh
-interval = 3
+interval = 1
 click-right = exec pavucontrol &
 click-left = ~/.config/polybar/pipewire-simple.sh --mute &
 scroll-up = ~/.config/polybar/pipewire-simple.sh --up &
